--- a/Physics Framework/DX11 Framework.vcxproj.filters
+++ b/Physics Framework/DX11 Framework.vcxproj.filters
@@ -12,33 +12,85 @@
     <Filter Include="Resource Files\Textures">
       <UniqueIdentifier>{84a4d56f-682d-4b12-a7c9-064cc08bce09}</UniqueIdentifier>
     </Filter>
+    <Filter Include=".cpp">
+      <UniqueIdentifier>{e54ba626-99aa-47d2-980a-a120374f21d0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include=".h">
+      <UniqueIdentifier>{9d06a4ad-4bcc-4b1f-83fd-35733073f736}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Application.h" />
-    <ClInclude Include="GameObject.h" />
-    <ClInclude Include="DDSTextureLoader.h" />
-    <ClInclude Include="Camera.h" />
-    <ClInclude Include="OBJLoader.h" />
-    <ClInclude Include="Structures.h" />
-    <ClInclude Include="ParticleModel.h" />
-    <ClInclude Include="Quaternion.h" />
-    <ClInclude Include="RigidBody.h" />
-    <ClInclude Include="Transform.h" />
-    <ClInclude Include="Vector3.h" />
-    <ClInclude Include="Appearance.h" />
+    <ClInclude Include="Vector3.h">
+      <Filter>.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Structures.h">
+      <Filter>.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Transform.h">
+      <Filter>.h</Filter>
+    </ClInclude>
+    <ClInclude Include="RigidBody.h">
+      <Filter>.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Quaternion.h">
+      <Filter>.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Physics.h">
+      <Filter>.h</Filter>
+    </ClInclude>
+    <ClInclude Include="OBJLoader.h">
+      <Filter>.h</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>.h</Filter>
+    </ClInclude>
+    <ClInclude Include="DDSTextureLoader.h">
+      <Filter>.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Application.h">
+      <Filter>.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Appearance.h">
+      <Filter>.h</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Application.cpp" />
-    <ClCompile Include="GameObject.cpp" />
-    <ClCompile Include="DDSTextureLoader.cpp" />
-    <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="OBJLoader.cpp" />
-    <ClCompile Include="ParticleModel.cpp" />
-    <ClCompile Include="RigidBody.cpp" />
-    <ClCompile Include="Transform.cpp" />
-    <ClCompile Include="Vector3.cpp" />
-    <ClCompile Include="Appearance.cpp" />
+    <ClCompile Include="Appearance.cpp">
+      <Filter>.cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="Application.cpp">
+      <Filter>.cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>.cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="DDSTextureLoader.cpp">
+      <Filter>.cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="OBJLoader.cpp">
+      <Filter>.cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="Main.cpp">
+      <Filter>.cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="Physics.cpp">
+      <Filter>.cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="RigidBody.cpp">
+      <Filter>.cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="Transform.cpp">
+      <Filter>.cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="Vector3.cpp">
+      <Filter>.cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>.cpp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CLInclude Include="resource.h">
@@ -62,8 +114,5 @@
     <Image Include="Resources\stone.dds">
       <Filter>Resource Files\Textures</Filter>
     </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
