--- a/Physics Framework/DX11 Framework.vcxproj
+++ b/Physics Framework/DX11 Framework.vcxproj
@@ -384,8 +384,10 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="MarchingCubes.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
+    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Physics.cpp" />
     <ClCompile Include="RigidBody.cpp" />
+    <ClCompile Include="SPH.cpp" />
     <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Vector3.cpp" />
   </ItemGroup>
@@ -401,6 +403,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Vector3D.h" />
     <ClInclude Include="ImGui\imconfig.h" />
     <ClInclude Include="ImGui\imgui.h" />
     <ClInclude Include="ImGui\imgui_impl_dx11.h" />
@@ -411,10 +414,12 @@
     <ClInclude Include="ImGui\imstb_truetype.h" />
     <ClInclude Include="MarchingCubes.h" />
     <ClInclude Include="OBJLoader.h" />
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="Physics.h" />
     <ClInclude Include="Quaternion.h" />
     <CLInclude Include="resource.h" />
     <ClInclude Include="RigidBody.h" />
+    <ClInclude Include="SPH.h" />
     <ClInclude Include="Structures.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="Vector3.h" />
