--- a/WaterSim/imgui.ini
+++ b/WaterSim/imgui.ini
@@ -9,7 +9,12 @@ Size=32,35
 Collapsed=0
 
 [Window][Debug Window]
-Pos=992,366
+Pos=1072,259
 Size=500,500
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=1133,250
+Size=550,680
 Collapsed=0
 
