--- a/WaterSim/WaterSim.vcxproj
+++ b/WaterSim/WaterSim.vcxproj
@@ -370,6 +370,7 @@
     <ClCompile Include="Physics.cpp" />
     <ClCompile Include="RigidBody.cpp" />
     <ClCompile Include="SPH.cpp" />
+    <ClCompile Include="Timestep.cpp" />
     <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Vector3.cpp" />
   </ItemGroup>
@@ -388,6 +389,7 @@
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="MarchingCubes.h" />
+    <ClInclude Include="MarchingCubeTable.h" />
     <ClInclude Include="OBJLoader.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="Physics.h" />
@@ -396,6 +398,7 @@
     <ClInclude Include="RigidBody.h" />
     <ClInclude Include="SPH.h" />
     <ClInclude Include="Structures.h" />
+    <ClInclude Include="Timestep.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="Vector3.h" />
   </ItemGroup>
