--- a/WaterSim/WaterSim.vcxproj.filters
+++ b/WaterSim/WaterSim.vcxproj.filters
@@ -135,6 +135,7 @@
     <ClInclude Include="MarchingCubeTable.h">
       <Filter>Marching Cubes</Filter>
     </ClInclude>
+    <ClInclude Include="Constants.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
