Compute Shaders Done

--- a/WaterSim/WaterSim.vcxproj.filters
+++ b/WaterSim/WaterSim.vcxproj.filters
@@ -164,5 +164,8 @@
     <FxCompile Include="shader.fx">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="SPHComputeShader.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
