--- a/WaterSim/imgui.ini
+++ b/WaterSim/imgui.ini
@@ -9,12 +9,22 @@ Size=32,35
 Collapsed=0
 
 [Window][Debug Window]
-Pos=616,364
+Pos=1357,215
 Size=500,500
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1133,250
-Size=550,680
+Pos=956,269
+Size=550,600
 Collapsed=0
+
+[Table][0x45A0E60D,7]
+RefScale=13
+Column 0  Width=49
+Column 1  Width=112
+Column 2  Width=112
+Column 3  Width=112
+Column 4  Width=112
+Column 5  Width=112
+Column 6  Width=112
 
