--- a/WaterSim/WaterSim.vcxproj
+++ b/WaterSim/WaterSim.vcxproj
@@ -354,6 +354,7 @@
     <ClCompile Include="Appearance.cpp" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="CompileShader.cpp" />
     <ClCompile Include="DDSTextureLoader.cpp" />
     <ClCompile Include="DebugDraw.cpp" />
     <ClCompile Include="GameObject.cpp" />
@@ -379,6 +380,7 @@
     <ClInclude Include="Appearance.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="CompileShader.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="DebugDraw.h" />
@@ -391,6 +393,7 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="Includes.h" />
     <ClInclude Include="MarchingCubes.h" />
     <ClInclude Include="MarchingCubeTable.h" />
     <ClInclude Include="OBJLoader.h" />
