--- a/WaterSim/WaterSim.vcxproj.filters
+++ b/WaterSim/WaterSim.vcxproj.filters
@@ -180,6 +180,9 @@
     <FxCompile Include="SPHComputeShader.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="WaterShader.fx">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
