--- a/WaterSim/WaterSim.vcxproj.filters
+++ b/WaterSim/WaterSim.vcxproj.filters
@@ -149,6 +149,7 @@
     <ClInclude Include="CompileShader.h" />
     <ClInclude Include="Includes.h" />
     <ClInclude Include="CreateID3D11Functions.h" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
