SPH Fixed Particles Motion + ImGui Fixes

--- a/WaterSim/imgui.ini
+++ b/WaterSim/imgui.ini
@@ -9,13 +9,18 @@ Size=32,35
 Collapsed=0
 
 [Window][Debug Window]
-Pos=245,104
+Pos=-37,189
 Size=500,500
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=956,269
-Size=550,600
+Pos=1121,203
+Size=550,551
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=817,119
+Size=769,507
 Collapsed=0
 
 [Table][0x45A0E60D,7]
