--- a/WaterSim/WaterSim.vcxproj
+++ b/WaterSim/WaterSim.vcxproj
@@ -376,6 +376,7 @@
     <ClCompile Include="MarchingCubes.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
     <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="SpatialGrid.cpp" />
     <ClCompile Include="SPH.cpp" />
     <ClCompile Include="Timestep.cpp" />
     <ClCompile Include="Transform.cpp" />
@@ -406,6 +407,7 @@
     <ClInclude Include="Particle.h" />
     <ClInclude Include="Quaternion.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="SpatialGrid.h" />
     <ClInclude Include="SPH.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="Structures.h" />
